# ShoestringCRM

./: CONTRIBUTING.md  Cargo.toml  END_TO_END_SLICE.md  EXECUTION_FLOW.md  README.md
docs/: AI.md  AIDataSystemsDependancies.md  ARCHITECTURE.md  CRMSystemDependancy.md  CommunicationsSystemsDependancy.md  ContentSystemsDependancies.md  DIAGRAM.md  ERD.md  FLUTTER_CLIENT.md  GraphQLANDZeroTrust.md  MODELDEF.md  ONBOARDING.md  WORKFLOW.md
docs/architecture/: AIDataSystemsDependancies.md  CRM-OperatingSystem.md  CRM-OperatingSystemApplicationServices.md  CRM-OperatingSystemApplications.md  CRM-OperatingSystemInfrastructure  CRM-OperatingSystemInfrastructure.md  CRMSystemDependancy.md  CommunicationsSystemsDependancy.md  ContentSystemsDependancies.md  GraphQLAndZeroTrust.md  IdentityProviderAndZeroTrust.md  InfrastructureSystemsDependancy.md  OperatingSystem-Mermaid.md  PlatformDependancyMatrix.md  PlatformInfrastructureSystems.md  ZeroTrust.md
docs/images/: crm-architecture-v3.drawio  crm-architecture-v4.drawio.xml
migrations/: 0001_init_accounts_contacts.sql  0002_init_tickets_social_events.sql  0003_init_leads_opportunities_campaigns_activities.sql
src/: config.rs  lib.rs  main.rs
src/ai/: audit.rs  mod.rs  ollama_client.rs  policy.rs  redaction.rs  service.rs
src/db/: pool.rs
src/graphql/: migrations.rs
src/model/: account.rs  contact.rs  lead.rs  mod.rs  opportunity.rs  social_event.rs  ticket.rs  types.rs
src/orm/: README.md  mod.rs  query.rs  rbac.rs  repo.rs  sql_builder.rs
src/security/: jwt.rs  mod.rs  principal.rs
